# Deformable-DETR

./: .gitignore  Dockerfile  Dockerfile_conda_cuda_not_available  Dockerfile_orig  README.md  demo.py  demo1.py  engine.py  lmao.ipynb  lmeo.ipynb  logs.txt  main.py  make.sh  make_assuming_venv_activated.sh  metrics.txt  pyproject.toml  run.ipynb  setup.py  tes.ipynb
MultiScaleDeformableAttention.egg-info/: SOURCES.txt
configs/: local.sh  r50_deformable_detr.sh
datasets/: coco.py  data_prefetcher.py  samplers.py
datasets/torchvision_datasets/: coco.py
deformable_detr/datasets/: __init__.py  coco.py  coco_eval.py  panoptic_eval.py  transforms.py
deformable_detr/models/: backbone.py  deformable_detr.py  deformable_transformer.py  matcher.py  position_encoding.py  segmentation.py
deformable_detr/models/ops/: test.py
deformable_detr/models/ops/functions/: ms_deform_attn_func.py
deformable_detr/util/: misc.py
models/: backbone.py  deformable_transformer.py  matcher.py  position_encoding.py
util/: args.py  colab.py  misc.py  sampler.py
