[tool.poetry]
name = "deformable-detr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycocotools = "^2.0.7"
tqdm = "^4.66.1"
Cython = "^3.0.8"
SciPy = "^1.11.4"
torch = "^2.1.2"
torchvision = "^0.16.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/lts/1.8/cu111"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
